# astra-gui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  codebook.toml  flake.nix  justfile
crates/astra-gui/: Cargo.toml
crates/astra-gui-fonts/: Cargo.toml
crates/astra-gui-interactive/: Cargo.toml
crates/astra-gui-interactive/src/: button.rs  collapsible.rs  drag_value.rs  lib.rs  slider.rs  slider_with_value.rs  text_input.rs  toggle.rs
crates/astra-gui-macros/: Cargo.toml
crates/astra-gui-macros/src/: lib.rs
crates/astra-gui-text/: Cargo.toml
crates/astra-gui-text/src/: lib.rs  lib.rs.bak
crates/astra-gui-wgpu/: Cargo.toml
crates/astra-gui-wgpu/examples/: alignment.rs  catppuccin.rs  collapsible.rs  corner_shapes.rs  drag_value.rs  fractional.rs  interactive.rs  layout.rs  multiline_text.rs  overflow.rs  place.rs  rotation.rs  scroll.rs  slider_with_value.rs  stroke.rs  stroke_alignment.rs  test_text_height.rs  text.rs  text_styling.rs  translation.rs  zindex.rs  zoom.rs
crates/astra-gui-wgpu/examples/shared/: debug_controls.rs  example_app.rs  gpu_state.rs  interactive.rs  mod.rs  runner.rs
crates/astra-gui-wgpu/src/: events.rs  input.rs  instance.rs  interactive_state.rs  lib.rs
crates/astra-gui-wgpu/src/shaders/: ui_sdf.wgsl  ui_triangle_sdf.wgsl
crates/astra-gui-wgpu/src/text/: atlas.rs
crates/astra-gui/src/: color.rs  component.rs  content.rs  context.rs  debug.rs  events.rs  hit_test.rs  input.rs  interactive_state.rs  layout.rs  lib.rs  measure.rs  memory.rs  node.rs  output.rs  primitives.rs  style.rs  tessellate.rs  transition.rs
plans/: drage-value.md  dynamic-atlas.md  optimisation.md  text-wrap.md  transformation.md  z-index.md  zoom.md
scripts/: count.fish  count.py  run-examples.sh
