[workspace]
members = [
    "crates/astra-gui",
    "crates/astra-gui-fonts",
    "crates/astra-gui-text",
    "crates/astra-gui-wgpu",
    "crates/astra-gui-interactive",
    "crates/astra-gui-macros",
]
resolver = "2"

[workspace.package]
version = "0.7.3"
edition = "2021"
authors = ["Jens Jensen <jens.jens@live.dk>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core wgpu for GPU programming
wgpu = "28.0"
# Window creation and event handling
winit = "0.30"
# Async runtime for wgpu initialization
pollster = "0.4"
# Linear algebra for 3D math
glam = "0.30"
# Byte conversion for GPU buffers
bytemuck = { version = "1.24", features = ["derive"] }
# Text shaping and rendering
cosmic-text = "0.16"
# Logging
log = "0.4"
env_logger = "0.11"
# Random number generation
rand = "0.9"
# Astra GUI
astra-gui = { path = "crates/astra-gui" }
astra-gui-fonts = { path = "crates/astra-gui-fonts" }
astra-gui-text = { path = "crates/astra-gui-text" }
astra-gui-wgpu = { path = "crates/astra-gui-wgpu" }
astra-gui-interactive = { path = "crates/astra-gui-interactive" }
astra-gui-macros = { path = "crates/astra-gui-macros" }

# Proc-macro helpers (used by astra-gui-macros)
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
