[package]
name = "astra-gui-fonts"
version.workspace = true
edition.workspace = true
description = "Bundled default fonts for astra-gui (Inter, etc.)"
license.workspace = true

[features]
default = ["inter"]
inter = []
jetbrains-mono = []

[dependencies]

[package.metadata]
# This crate embeds font binaries from the repository's assets directory via `include_bytes!`.
# See `particles/assets/fonts/*/OFL.txt` for font licensing details (SIL Open Font License).
