[package]
name = "astra-gui-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Proc-macros for astra-gui (e.g. WithBuilders derive)"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
