[package]
name = "astra-gui-text"
version.workspace = true
edition.workspace = true
description = "Backend-agnostic text shaping and glyph rasterization for astra-gui"
license.workspace = true

[features]
default = ["cosmic"]
cosmic = ["dep:cosmic-text"]

[dependencies]
astra-gui = { workspace = true }
astra-gui-fonts = { path = "../astra-gui-fonts", default-features = true, features = [
    "inter",
] }

# Text shaping & rasterization
cosmic-text = { workspace = true, optional = true }
slotmap = "1.0"

# Utility
bytemuck = { version = "1.24", features = ["derive"] }

[package.metadata]
# This crate is intended to be renderer/backend agnostic:
# it performs shaping and produces CPU-side glyph bitmaps + placement info.
# GPU upload / atlas textures / shaders belong in backend crates (e.g. astra-gui-wgpu).
