[package]
name = "astra-gui-wgpu"
version.workspace = true
edition.workspace = true
description = "WGPU rendering backend for astra-gui"

[features]
default = ["text-cosmic"]
text-cosmic = ["dep:cosmic-text"]

[dependencies]
astra-gui = { workspace = true }
astra-gui-text = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { version = "1.24", features = ["derive"] }
cosmic-text = { workspace = true, optional = true }

[dev-dependencies]
winit = { workspace = true }
pollster = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
astra-gui-interactive = { workspace = true }
display-info = "0.5"
