[package]
name = "astra-gui"
version.workspace = true
edition.workspace = true
description = "Graphics backend agnostic UI library - core primitives and logic"

[dependencies]
glam = { workspace = true }
bytemuck = { version = "1.24", optional = true }

[features]
default = []
bytemuck = ["dep:bytemuck"]
